// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions view matches snapshot 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px 12px;
  border: none;
  border-radius: 4px;
  white-space: nowrap;
  background: #E8E8FC;
  color: #171A1C;
  font-size: 14px;
  font-weight: 500;
  height: 32px;
}

.c1:hover:enabled {
  background: #D1D1FA;
  color: #171A1C;
  cursor: pointer;
}

.c1:active:enabled {
  background: #A3A3F5;
  color: #171A1C;
}

.c1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c1 a {
  color: #171A1C;
}

.c1 i {
  margin-right: 7px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px 12px;
  border: none;
  border-radius: 4px;
  white-space: nowrap;
  background: #F1F2F3;
  color: #171A1C;
  font-size: 14px;
  font-weight: 500;
  height: 32px;
}

.c2:hover:enabled {
  background: #E3E6E8;
  color: #171A1C;
  cursor: pointer;
}

.c2:active:enabled {
  background: #D5DADD;
  color: #171A1C;
}

.c2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c2 a {
  color: #171A1C;
}

.c2 i {
  margin-right: 7px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

<div
  className="c0"
>
  <button
    className="c1"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="fas fa-pause"
      />
    </span>
    <span>
      Pause
    </span>
  </button>
  <button
    className="c1"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="fas fa-sync-alt"
      />
    </span>
    <span>
      Restart Connector
    </span>
  </button>
  <a
    href="/clusters/my-cluster/connects/my-connect/connectors/my-connector/edit"
    onClick={[Function]}
  >
    <button
      className="c1"
      disabled={false}
      type="button"
    >
      <span>
        <i
          className="fas fa-pencil-alt"
        />
      </span>
      <span>
        Edit Config
      </span>
    </button>
  </a>
  <button
    className="c2"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="far fa-trash-alt"
      />
    </span>
    <span>
      Delete
    </span>
  </button>
  <mock-ConfirmationModal
    isConfirming={false}
    isOpen={false}
    onCancel={[Function]}
    onConfirm={[Function]}
  >
    Are you sure you want to remove 
    <b>
      my-connector
    </b>
     connector?
  </mock-ConfirmationModal>
</div>
`;

exports[`Actions view matches snapshot when deleting connector 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px 12px;
  border: none;
  border-radius: 4px;
  white-space: nowrap;
  background: #E8E8FC;
  color: #171A1C;
  font-size: 14px;
  font-weight: 500;
  height: 32px;
}

.c1:hover:enabled {
  background: #D1D1FA;
  color: #171A1C;
  cursor: pointer;
}

.c1:active:enabled {
  background: #A3A3F5;
  color: #171A1C;
}

.c1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c1 a {
  color: #171A1C;
}

.c1 i {
  margin-right: 7px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px 12px;
  border: none;
  border-radius: 4px;
  white-space: nowrap;
  background: #F1F2F3;
  color: #171A1C;
  font-size: 14px;
  font-weight: 500;
  height: 32px;
}

.c2:hover:enabled {
  background: #E3E6E8;
  color: #171A1C;
  cursor: pointer;
}

.c2:active:enabled {
  background: #D5DADD;
  color: #171A1C;
}

.c2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c2 a {
  color: #171A1C;
}

.c2 i {
  margin-right: 7px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

<div
  className="c0"
>
  <button
    className="c1"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="fas fa-pause"
      />
    </span>
    <span>
      Pause
    </span>
  </button>
  <button
    className="c1"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="fas fa-sync-alt"
      />
    </span>
    <span>
      Restart Connector
    </span>
  </button>
  <a
    href="/clusters/my-cluster/connects/my-connect/connectors/my-connector/edit"
    onClick={[Function]}
  >
    <button
      className="c1"
      disabled={false}
      type="button"
    >
      <span>
        <i
          className="fas fa-pencil-alt"
        />
      </span>
      <span>
        Edit Config
      </span>
    </button>
  </a>
  <button
    className="c2"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="far fa-trash-alt"
      />
    </span>
    <span>
      Delete
    </span>
  </button>
  <mock-ConfirmationModal
    isConfirming={true}
    isOpen={false}
    onCancel={[Function]}
    onConfirm={[Function]}
  >
    Are you sure you want to remove 
    <b>
      my-connector
    </b>
     connector?
  </mock-ConfirmationModal>
</div>
`;

exports[`Actions view matches snapshot when failed 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px 12px;
  border: none;
  border-radius: 4px;
  white-space: nowrap;
  background: #E8E8FC;
  color: #171A1C;
  font-size: 14px;
  font-weight: 500;
  height: 32px;
}

.c1:hover:enabled {
  background: #D1D1FA;
  color: #171A1C;
  cursor: pointer;
}

.c1:active:enabled {
  background: #A3A3F5;
  color: #171A1C;
}

.c1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c1 a {
  color: #171A1C;
}

.c1 i {
  margin-right: 7px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px 12px;
  border: none;
  border-radius: 4px;
  white-space: nowrap;
  background: #F1F2F3;
  color: #171A1C;
  font-size: 14px;
  font-weight: 500;
  height: 32px;
}

.c2:hover:enabled {
  background: #E3E6E8;
  color: #171A1C;
  cursor: pointer;
}

.c2:active:enabled {
  background: #D5DADD;
  color: #171A1C;
}

.c2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c2 a {
  color: #171A1C;
}

.c2 i {
  margin-right: 7px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

<div
  className="c0"
>
  <button
    className="c1"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="fas fa-sync-alt"
      />
    </span>
    <span>
      Restart Connector
    </span>
  </button>
  <a
    href="/clusters/my-cluster/connects/my-connect/connectors/my-connector/edit"
    onClick={[Function]}
  >
    <button
      className="c1"
      disabled={false}
      type="button"
    >
      <span>
        <i
          className="fas fa-pencil-alt"
        />
      </span>
      <span>
        Edit Config
      </span>
    </button>
  </a>
  <button
    className="c2"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="far fa-trash-alt"
      />
    </span>
    <span>
      Delete
    </span>
  </button>
  <mock-ConfirmationModal
    isConfirming={false}
    isOpen={false}
    onCancel={[Function]}
    onConfirm={[Function]}
  >
    Are you sure you want to remove 
    <b>
      my-connector
    </b>
     connector?
  </mock-ConfirmationModal>
</div>
`;

exports[`Actions view matches snapshot when paused 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px 12px;
  border: none;
  border-radius: 4px;
  white-space: nowrap;
  background: #E8E8FC;
  color: #171A1C;
  font-size: 14px;
  font-weight: 500;
  height: 32px;
}

.c1:hover:enabled {
  background: #D1D1FA;
  color: #171A1C;
  cursor: pointer;
}

.c1:active:enabled {
  background: #A3A3F5;
  color: #171A1C;
}

.c1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c1 a {
  color: #171A1C;
}

.c1 i {
  margin-right: 7px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px 12px;
  border: none;
  border-radius: 4px;
  white-space: nowrap;
  background: #F1F2F3;
  color: #171A1C;
  font-size: 14px;
  font-weight: 500;
  height: 32px;
}

.c2:hover:enabled {
  background: #E3E6E8;
  color: #171A1C;
  cursor: pointer;
}

.c2:active:enabled {
  background: #D5DADD;
  color: #171A1C;
}

.c2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c2 a {
  color: #171A1C;
}

.c2 i {
  margin-right: 7px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

<div
  className="c0"
>
  <button
    className="c1"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="fas fa-play"
      />
    </span>
    <span>
      Resume
    </span>
  </button>
  <button
    className="c1"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="fas fa-sync-alt"
      />
    </span>
    <span>
      Restart Connector
    </span>
  </button>
  <a
    href="/clusters/my-cluster/connects/my-connect/connectors/my-connector/edit"
    onClick={[Function]}
  >
    <button
      className="c1"
      disabled={false}
      type="button"
    >
      <span>
        <i
          className="fas fa-pencil-alt"
        />
      </span>
      <span>
        Edit Config
      </span>
    </button>
  </a>
  <button
    className="c2"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="far fa-trash-alt"
      />
    </span>
    <span>
      Delete
    </span>
  </button>
  <mock-ConfirmationModal
    isConfirming={false}
    isOpen={false}
    onCancel={[Function]}
    onConfirm={[Function]}
  >
    Are you sure you want to remove 
    <b>
      my-connector
    </b>
     connector?
  </mock-ConfirmationModal>
</div>
`;

exports[`Actions view matches snapshot when running connector action 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px 12px;
  border: none;
  border-radius: 4px;
  white-space: nowrap;
  background: #E8E8FC;
  color: #171A1C;
  font-size: 14px;
  font-weight: 500;
  height: 32px;
}

.c1:hover:enabled {
  background: #D1D1FA;
  color: #171A1C;
  cursor: pointer;
}

.c1:active:enabled {
  background: #A3A3F5;
  color: #171A1C;
}

.c1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c1 a {
  color: #171A1C;
}

.c1 i {
  margin-right: 7px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px 12px;
  border: none;
  border-radius: 4px;
  white-space: nowrap;
  background: #F1F2F3;
  color: #171A1C;
  font-size: 14px;
  font-weight: 500;
  height: 32px;
}

.c2:hover:enabled {
  background: #E3E6E8;
  color: #171A1C;
  cursor: pointer;
}

.c2:active:enabled {
  background: #D5DADD;
  color: #171A1C;
}

.c2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c2 a {
  color: #171A1C;
}

.c2 i {
  margin-right: 7px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

<div
  className="c0"
>
  <button
    className="c1"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="fas fa-pause"
      />
    </span>
    <span>
      Pause
    </span>
  </button>
  <button
    className="c1"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="fas fa-sync-alt"
      />
    </span>
    <span>
      Restart Connector
    </span>
  </button>
  <a
    href="/clusters/my-cluster/connects/my-connect/connectors/my-connector/edit"
    onClick={[Function]}
  >
    <button
      className="c1"
      disabled={true}
      type="button"
    >
      <span>
        <i
          className="fas fa-pencil-alt"
        />
      </span>
      <span>
        Edit Config
      </span>
    </button>
  </a>
  <button
    className="c2"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="far fa-trash-alt"
      />
    </span>
    <span>
      Delete
    </span>
  </button>
  <mock-ConfirmationModal
    isConfirming={false}
    isOpen={false}
    onCancel={[Function]}
    onConfirm={[Function]}
  >
    Are you sure you want to remove 
    <b>
      my-connector
    </b>
     connector?
  </mock-ConfirmationModal>
</div>
`;

exports[`Actions view matches snapshot when unassigned 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px 12px;
  border: none;
  border-radius: 4px;
  white-space: nowrap;
  background: #E8E8FC;
  color: #171A1C;
  font-size: 14px;
  font-weight: 500;
  height: 32px;
}

.c1:hover:enabled {
  background: #D1D1FA;
  color: #171A1C;
  cursor: pointer;
}

.c1:active:enabled {
  background: #A3A3F5;
  color: #171A1C;
}

.c1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c1 a {
  color: #171A1C;
}

.c1 i {
  margin-right: 7px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px 12px;
  border: none;
  border-radius: 4px;
  white-space: nowrap;
  background: #F1F2F3;
  color: #171A1C;
  font-size: 14px;
  font-weight: 500;
  height: 32px;
}

.c2:hover:enabled {
  background: #E3E6E8;
  color: #171A1C;
  cursor: pointer;
}

.c2:active:enabled {
  background: #D5DADD;
  color: #171A1C;
}

.c2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c2 a {
  color: #171A1C;
}

.c2 i {
  margin-right: 7px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

<div
  className="c0"
>
  <button
    className="c1"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="fas fa-sync-alt"
      />
    </span>
    <span>
      Restart Connector
    </span>
  </button>
  <a
    href="/clusters/my-cluster/connects/my-connect/connectors/my-connector/edit"
    onClick={[Function]}
  >
    <button
      className="c1"
      disabled={false}
      type="button"
    >
      <span>
        <i
          className="fas fa-pencil-alt"
        />
      </span>
      <span>
        Edit Config
      </span>
    </button>
  </a>
  <button
    className="c2"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span>
      <i
        className="far fa-trash-alt"
      />
    </span>
    <span>
      Delete
    </span>
  </button>
  <mock-ConfirmationModal
    isConfirming={false}
    isOpen={false}
    onCancel={[Function]}
    onConfirm={[Function]}
  >
    Are you sure you want to remove 
    <b>
      my-connector
    </b>
     connector?
  </mock-ConfirmationModal>
</div>
`;
